--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <application
         android:allowBackup="true"
-        android:icon="@drawable/m"
+        android:icon="@drawable/lun"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".MainActivity"
-            android:label="Echo"
+            android:label="Sky"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".activities.SplashActivity"
